terraform/modules/vpc/main.tf
#CREATING VPC

resource "aws_vpc" "this" {
  cidr_block = var.vpc_cidr
  enable_dns_hostnames = true
  enable_dns_support = true
    
  tags = {
    Name = "${var.project_name}-${var.environment}-vpc" 
  }
} 

#------------------------------------------------------------------------
# CREATING INTERNET GATEWAY (attaching vpc id too)

resource "aws_internet_gateway" "this" {
  vpc_id = aws_vpc.this.id

  tags ={
    Name = "${var.project_name}-${var.environment}-igw" 
  }  
}

#---------------------------------------------------------------------------
#  CREATING PUBLIC SUBNETS

resource "aws_subnet" "public" {
   count = length (var.public_subnet_cidrs)

   vpc_id = aws_vpc.this.id
   cidr_block = var.public_subnet_cidrs[count.index]
   availability_zone = var.availability_zones[count.index]
   map_public_ip_on_launch = true

   tags = {
    Name = "${var.project_name}-${var.environment}-public-${count.index + 1}"

    "kubernetes.io/role/elb" = "1"

    "kubernetes.io/cluster/${var.project_name}-${var.environment}" = "shared"
   }
  
}

#----------------------------------------------------------------------
#CREATING PRIVATE SUBNETS

resource "aws_subnet" "private" {
  count = length (var.private_subnet_cidrs)

  vpc_id = aws_vpc.this.id
  cidr_block = var.private_subnet_cidrs[count.index]
  availability_zone = var.availability_zones[count.index]

  tags = {
    Name = "${var.project_name}-${var.environment}-private-${count.index + 1}"

    "kubernetes.io/role/internal-elb" = "1"

    "kubernetes.io/cluster/${var.project_name}-${var.environment}" = "shared"
  }
}

#--------------------------------------------------------------
#CREATING ELASTIC IP FOR NAT

resource "aws_eip" "nat" {
  domain = "vpc"

  tags = {
    Name = "${var.project_name}-${var.environment}-nat-eip"
  }  
}

#-----------------------------------------------------------
#CREATING NAT GATEWAY (provides outbound internet for private subnets)

resource "aws_nat_gateway" "this" {
  
  allocation_id = aws_eip.nat.id

  subnet_id = aws_subnet.public[0].id

  tags = {

    Name = "${var.project_name}-${var.environment}-nat"
  }

  depends_on = [aws_internet_gateway.this]

}

#-------------------------------------------------------
#CREATING PUBLIC ROUTE TABLE

resource "aws_route_table" "public" {
  vpc_id = aws_vpc.this.id

  route {
    cidr_block = "0.0.0.0/0"

    gateway_id = aws_internet_gateway.this.id
  }

  tags = {
    Name = "${var.project_name}-${var.environment}-public-rt"
  }

}

#--------------------------------------------
#CREATING PRIVATE ROUTE TABLE

resource "aws_route_table" "private" {
  vpc_id = aws_vpc.this.id

  route {
    cidr_block = "0.0.0.0/0"

    nat_gateway_id = aws_nat_gateway.this.id
  }  

  tags = {
    Name = "${var.project_name}-${var.environment}-private-rt"
  }
}

#---------------------------------------------
#ASSOCIATE PUBLIC SUBNETS WITH PUBLIC ROUTE TABLE

resource "aws_route_table_association" "public" {

  count = length (var.public_subnet_cidrs)

  subnet_id = aws_subnet.public[count.index].id
  route_table_id = aws_route_table.public.id    
}

#-----------------------------------------------------------
#ASSOCIATE PRIVATE SUBNETS WITH PRIVATE ROUTE TABLE

resource "aws_route_table_association" "private" {

  count = length (var.private_subnet_cidrs)

  subnet_id = aws_subnet.private[count.index].id
  route_table_id = aws_route_table.private.id  
}
